Fix FF whitespace issue

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -4,9 +4,12 @@
 }
 
 pre {
-    font-size: 18px;
-    max-width: 100%;
-    word-wrap: break-word;
+    font-size: 22px;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
+    word-wrap: break-word; /* IE 5.5+ */
 }
 
 body {
